<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/operands_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/operand_1_edit_text"
            style="@style/OperandEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/first_operand_hint" />

        <EditText
            android:id="@+id/operand_2_edit_text"
            style="@style/OperandEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/second_operand_hint" />

    </LinearLayout>

    <TextView
        android:id="@+id/result_text_view"
        style="@style/ResultTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/result_text_intro" />

    <LinearLayout
        android:id="@+id/operations_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/add_button"
            style="@style/OperationButtonsStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCalculate"
            android:text="@string/add_label" />

        <Button
            android:id="@+id/subtract_button"
            style="@style/OperationButtonsStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCalculate"
            android:text="@string/subtract_label" />

        <Button
            android:id="@+id/multiply_button"
            style="@style/OperationButtonsStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCalculate"
            android:text="@string/multiply_label" />

        <Button
            android:id="@+id/divide_button"
            style="@style/OperationButtonsStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCalculate"
            android:text="@string/divide_label" />

    </LinearLayout>

</LinearLayout>